--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
        "start": "vite --port 3000 --open",
         "dev": "vite --port 3000 --open",
         "build": "vite build",
-        "serve": "vite preview --open"
+        "serve": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
